--- a/.github/workflows/activation_unity.yml
+++ b/.github/workflows/activation_unity.yml
@@ -1,38 +1,18 @@
-name: Unity Test and Build
+name: Acquire activation file
 on:
-  push:
-    branches: [ main ]
+  workflow_dispatch: {}
 jobs:
-  build:
+  activation:
+    name: Request manual activation file 🔑
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Unity
-        uses: game-ci/setup-unity@v1
+      # Request manual activation file
+      - name: Request manual activation file
+        id: getManualLicenseFile
+        uses: game-ci/unity-request-activation-file@v2
+      # Upload artifact (Unity_v20XX.X.XXXX.alf)
+      - name: Expose as artifact
+        uses: actions/upload-artifact@v2
         with:
-          unity-version: 2020.3.14f1
-          components: unity-webgl
-      - name: Cache Unity Packages
-        uses: actions/cache@v2
-        with:
-          path: Library
-          key: ${{ runner.os }}-unity-${{ hashFiles('**/ProjectSettings/ProjectVersion.txt') }}
-          restore-keys: ${{ runner.os }}-unity-
-      # - name: Run Tests
-        # run: |
-        #   /opt/unity/Editor/Unity \
-        #   -batchmode \
-        #   -nographics \
-        #   -projectPath ${{ github.workspace }}/TestRunnerGame \
-        #   -runTests \
-        #   -testPlatform editmode \
-        #   -testResults ${{ github.workspace }}/test_results.xml
-      - name: Build WebGL
-        run: |
-          /opt/unity/Editor/Unity \
-          -batchmode \
-          -nographics \
-          -quit \
-          -projectPath ${{ github.workspace }}/TestRunnerGame \
-          -executeMethod BuildScript.BuildWebGL \
-          -logFile WebGLBuild.log
+          name: ${{ steps.getManualLicenseFile.outputs.filePath }}
+          path: ${{ steps.getManualLicenseFile.outputs.filePath }}
