--- a/.github/workflows/activation_unity.yml
+++ b/.github/workflows/activation_unity.yml
@@ -12,7 +12,8 @@ jobs:
         uses: game-ci/unity-request-activation-file@v2
       # Upload artifact (Unity_v20XX.X.XXXX.alf)
       - name: Expose as artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v2.0.0
         with:
+          unityVersion: 2021.3.20f1
           name: ${{ steps.getManualLicenseFile.outputs.filePath }}
           path: ${{ steps.getManualLicenseFile.outputs.filePath }}
