--- a/.github/workflows/build_unity.yml
+++ b/.github/workflows/build_unity.yml
@@ -3,18 +3,34 @@ on:
   push:
     branches: [ main ]
 jobs:
-  build:
+  buildForAllSupportedPlatforms:
+    name: Build for ${{ matrix.targetPlatform }}
     runs-on: ubuntu-latest
+    stragegy:
+      fail-fast: false
+      matrix:
+        targetPlatform:
+          - WebGL
     steps:
-      - name: Set up Unity
+      - name: Checkout
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          lfs: true
+      - name: Cache
+      - uses: actions/cache@v2
+        with:
+          path: Library
+          key: Library-${{ matrix.targetPlatform }}
+          restore-keys: Library-
+      - name: Build
       - uses: game-ci/unity-builder@v2
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
-          targetPlatform: WebGL
-      - name: Storing the build
+          targetPlatform: ${{ matrix.targetPlatform }}
+      - name: Storing Artifact
+      - uses: actions/upload-artifact@v2
         with:
-          name: Build
-          path: build
+          name: Build-${{ matrix.targetPlatform }}
+          path: build/${{ matrix.targetPlatform }}
