--- a/.github/workflows/build_unity.yml
+++ b/.github/workflows/build_unity.yml
@@ -1,36 +1,39 @@
 name: Build WebGL
+
 on:
   push:
     branches: [ main ]
+
 jobs:
-  buildForAllSupportedPlatforms:
-    name: Build for ${{ matrix.targetPlatform }}
-    runs-on: ubuntu-latest
-    stragegy:
-      fail-fast: false
-      matrix:
-        targetPlatform:
-          - WebGL
-    steps:
-      - name: Checkout
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          lfs: true
-      - name: Cache
-      - uses: actions/cache@v2
-        with:
-          path: Library
-          key: Library-${{ matrix.targetPlatform }}
-          restore-keys: Library-
-      - name: Build
-      - uses: game-ci/unity-builder@v2
-        env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-        with:
-          targetPlatform: ${{ matrix.targetPlatform }}
-      - name: Storing Artifact
-      - uses: actions/upload-artifact@v2
-        with:
-          name: Build-${{ matrix.targetPlatform }}
-          path: build/${{ matrix.targetPlatform }}
+    buildForAllSupportedPlatforms:
+        name: Build for ${{ matrix.targetPlatform }}
+        runs-on: ubuntu-latest
+        stragegy:
+            fail-fast: false
+            matrix:
+                targetPlatform:
+                    - WebGL
+
+        steps:
+            #- name: Checkout
+            - uses: actions/checkout@v2
+              with:
+                  fetch-depth: 0
+                  lfs: true
+            #- name: Cache
+            - uses: actions/cache@v2
+              with:
+                  path: Library
+                  key: Library-${{ matrix.targetPlatform }}
+                  restore-keys: Library-
+            #- name: Build
+            - uses: game-ci/unity-builder@v2
+              env:
+                  UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+              with:
+                  targetPlatform: ${{ matrix.targetPlatform }}
+            #- name: Storing Artifact
+            - uses: actions/upload-artifact@v2
+              with:
+                  name: Build-${{ matrix.targetPlatform }}
+                  path: build/${{ matrix.targetPlatform }}
