--- a/.github/workflows/build_unity.yml
+++ b/.github/workflows/build_unity.yml
@@ -29,7 +29,7 @@ jobs:
             #- name: Build
             - uses: game-ci/unity-builder@v2
               env:
-                  UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+                  UNITY_LICENSE: ${{ secrets.UNITY_SERIAL }}
               with:
                   targetPlatform: ${{ matrix.targetPlatform }}
                   projectPath: TestRunnerGame/
