--- a/.github/workflows/build_unity.yml
+++ b/.github/workflows/build_unity.yml
@@ -11,30 +11,32 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
+                projectPath:
+                    - TestRunnerGame
                 targetPlatform:
                     - WebGL
 
         steps:
-            #- name: Checkout
-            - uses: actions/checkout@v2
+            - name: Checkout
+              uses: actions/checkout@v2
               with:
                   fetch-depth: 0
                   lfs: true
-            #- name: Cache
-            - uses: actions/cache@v2
+            - name: Cache
+              uses: actions/cache@v2
               with:
-                  path: Library
+                  path: ${{ matrix.projectPath }}/Library
                   key: Library-${{ matrix.targetPlatform }}
                   restore-keys: Library-
-            #- name: Build
-            - uses: game-ci/unity-builder@v2
+            - name: Build
+              uses: game-ci/unity-builder@v2
               env:
                   UNITY_LICENSE: ${{ secrets.UNITY_SERIAL }}
               with:
                   targetPlatform: ${{ matrix.targetPlatform }}
-                  projectPath: TestRunnerGame/
-            #- name: Storing Artifact
-            - uses: actions/upload-artifact@v2
+                  projectPath: ${{ matrix.projectPath }}/
+            - name: Storing Artifact
+              uses: actions/upload-artifact@v2
               with:
                   name: Build-${{ matrix.targetPlatform }}
                   path: build/${{ matrix.targetPlatform }}
