Update test unity

--- a/.github/workflows/test_unity.yml
+++ b/.github/workflows/test_unity.yml
@@ -13,7 +13,7 @@ jobs:
             matrix:
                 projectPath:
                     - TestRunnerGame
-                targetPlatform:
+                testMode:
                     - playmode
                     - editmode
 
